--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
+    "axios": "^0.5.4",
     "babel": "^5.0.8",
     "babel-core": "^5.0.8",
     "babel-eslint": "^3.0.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "^2.0.1",
     "eventemitter3": "^0.1.6",
     "express": "^4.11.2",
+    "express-http-proxy": "^0.5.0",
     "extract-text-webpack-plugin": "^0.5.0",
     "fastclick": "^1.0.6",
     "file-loader": "^0.8.1",
