--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "comma-spacing": [1, {"before": false, "after": true}],
     "comma-style": [1, "last"],
     "consistent-this": [1, "self"],
-    "curly": [2, "multi"],
+    "curly": [2, "multi-line"],
     "eqeqeq": [2, "allow-null"],
     "eol-last": 1,
     "guard-for-in": 0,
