add some missing dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^3.0.1",
     "babel-jest": "^5.0.0",
     "babel-loader": "^5.0.0",
+    "babel-runtime": "^5.8.3",
     "bluebird": "^2.9.9",
     "classnames": "^1.1.4",
     "compression": "^1.4.0",
@@ -27,6 +28,7 @@
     "del": "^1.1.1",
     "eslint-plugin-react": "^2.0.1",
     "eventemitter3": "^1.0.1",
+    "expose-loader": "^0.7.0",
     "express": "^4.11.2",
     "express-http-proxy": "^0.5.0",
     "extract-text-webpack-plugin": "^0.7.0",
